2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-keybinding-properties.glade:  Minor HIG widget padding
	adjustments.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-03  Kjartan Maraas  <kmaraas@gnome.org>

	* eggcellrendererkeys.c: (egg_cell_renderer_keys_set_accelerator):
	Merge leak fix from stable.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-30  Kjartan Maraas  <set EMAIL_ADDRESS environment variable>

	* gnome-keybinding-properties.c: (make_key_theme_menu_item): Mark
	string for translation. Patch from Hidetoshi Tajima.
	Fixes bug #106560.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

2003-01-21 Shivram U  <shivaram.upadhyayula@wipro.com>

        * gnome-keybindings-properties.c (append_keys_to_tree): Set the size
        request of the shortcuts treeview instead of the the actions scrolled
        window. (#103962)

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

Mon Jan 13 15:14:22 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keybinding-properties.c (main): gnome_theme_init() added.

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2003-01-03  Havoc Pennington  <hp@redhat.com>

	* gnome-keybinding-properties.c (metacity_key_list): add
	vertical/horizontal maximize (this adds no strings or features, 
	just fixes the list being out of sync with metacity)

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-12-04  Havoc Pennington  <hp@pobox.com>

	* gnome-keybinding-properties.glade: set all the spacings to 12 as
	per HIG

2002-12-04  Havoc Pennington  <hp@pobox.com>

	* gnome-keybinding-properties.c (clear_old_model): create a sort
	model for the treeview.

2002-12-03  Havoc Pennington  <hp@pobox.com>
