@@ -1,3 +1,8 @@
+Fri Jul 25 16:29:29 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-keybinding-properties.c (desktop_key_list): Patch from
+	Ghee Teo to move the key bindings to the right place.
+
 2003-07-11  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* gnome-keybinding-properties.glade:  Minor HIG widget padding
